# QPQT

./: .gitignore  CMakeLists.txt  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
.cache/clangd/: compile_commands.json
.github/workflows/: duckdb_extension.yml  wheels.yml
benchmarks/: qpqt_bench.cpp
cli/: qpqt_cli.cpp
docs/: QPQT_FORMAT_SPEC_v1.md
examples/: end_to_end.py
include/: qpqt_crypto.h  qpqt_types.h  qpqt_utils.h
integrations/arrow/: qpqt_arrow.cpp
integrations/duckdb/: CMakeLists.txt  append_metadata.py  qpqt_extension.cpp  qpqt_extension.hpp  qpqt_scan.cpp  qpqt_scan.hpp  test_duckdb.py
python/: qpqt_python.cpp  test_types.py
scripts/: install_deps.sh
src/: qpqt_reader.cpp  qpqt_writer.cpp
tests/: qpqt_tests.cpp
