[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "qpqt"
version = "0.2.0"
description = "Quantum-Safe Columnar Storage Format with row-granular lazy decryption"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Rohan Prabhakar" }]
keywords = [
    "post-quantum-cryptography",
    "ml-kem",
    "columnar-storage",
    "encryption",
    "data-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
arrow = ["pyarrow>=12.0"]

[project.urls]
Homepage = "https://github.com/Rohan-Prabhakar/QPQT"
Repository = "https://github.com/Rohan-Prabhakar/QPQT"
